--- a/style.css
+++ b/style.css
@@ -1,3 +1,68 @@
 *{
-    color: purple;
+    margin: 0;
+    padding: 0;
+}
+
+
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-size:auto;
+    color: #fff;
+}
+
+.header {
+    background-color: black;
+    padding: 20px;
+   
+}
+
+h1{
+    display: inline;
+}
+
+.nav-link {
+    background-color: black;
+    text-decoration: none;
+    display: inline;
+    color: gray;
+    cursor: pointer;
+
+}
+
+.searchbar {
+    padding-left: 20px;
+    text-align: left;
+    margin-top: 20px;
+}
+
+.search-input {
+    padding: 10px;
+    border:lch(from color l c h);
+    border-radius: 5px;
+}
+
+.content {
+    
+    
+    color:black;
+    padding: 20px;
+    margin: 20px;
+}
+
+.recipes {
+    
+    color: black;
+    padding: 20px;
+    margin: 20px;
+}
+
+.recipe-link {
+   
+    text-decoration: none;
+}
+
+.recipe-link:hover {
+    text-decoration: underline;
 }
